--- a/src/components/Forecast/styles.css
+++ b/src/components/Forecast/styles.css
@@ -1,5 +1,7 @@
 .forecast {
-    display: flex;
-    flex-direction: row;
-    color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: white;
+  margin-top: 75px;
 }
